requetes + interface + populate

--- a/myapp2018/src/main/webapp/index.html
+++ b/myapp2018/src/main/webapp/index.html
@@ -2,150 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="google-site-verification" content="Ii0W5F3BKrIDvUomycJRfw1YGs7vIiZRP4Ri-4p3jY8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TinyPet</title>
+    <!-- https://github.com/GoogleCloudPlatform/web-docs-samples/blob/master/endpoints-frameworks/main.js aide pour l'authentification via google -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
-	<script src="https://unpkg.com/mithril/mithril.js"></script>
+
+	<script src="https://unpkg.com/mithril/mithril.js"></script>	
+	
   </head>
   <body>
- <script>
-		var root= "http://localhost:8080/_ah/api/myApi/v1" 
-	/* 	var root= "https://cloud-miage.appspot.com/_ah/api/myApi/v1" */
-	
+ <script src="main.js"></script>
 
-		var Petitions = {
-			list:[],
-			view: function () {
-				var main = m("div.container",{oninit:function(){
-					 m.request({
-					        method: "GET",
-					        url: root+"/petitions",
-					    })
-					    .then(function(data) {
-					    	Petitions.list = data.items;
-					    	console.log(Petitions.list);
-					    })
-				} }, [
-					m("h1", { class: "title" }, "Les pétitions"),
-					m(FormPetition),
-					m("a.button is-primary is-primary is-rounded", {
-						onclick: function () {
-							 m.request({
-							        method: "GET",
-							        url: root+"/petitions",
-							    })
-							    .then(function(data) {
-							    	Petitions.list = data.items;
-							    	console.log(Petitions.list);
-							    })
-						}
-					}, "Toutes les pétitions"),
-					m("a.button is-info is-rounded ", {
-						onclick: function () {
-							 m.request({
-							        method: "GET",
-							        url: root+"/petition/top",
-							    })
-							    .then(function(data) {
-							    	Petitions.list = data.items;
-							    	console.log(Petitions.list);
-							    })
-						}
-					}, "Top 100"),
-					m("div.box", petitionList(Petitions.list))
-				])
-				return main;
-			}
-		}
-		
-	function petitionList(petitions){
-		return petitions.map(function(p) {
-	        return m("div.box", [
-	        	m("article.media",[
-	        		m("div.media-content",[
-	        			m("div.content",[
-	        					m("p",[
-		        					m("strong",p.properties.title),
-		        					m("br"),
-		        					m("span",p.properties.description),
-		        					m("br"),
-		        					m("span", "Signatures: "+p.properties.counter)
-		        				]),
-		        				m("a.button is-info",{onclick:function(){
-		        					 m.request({
-								        method: "POST",
-								        url: root+"/signature",
-								        data:{signatory:"test" ,title:p.properties.title}
-								    })
-								    .then(function(data) {
-								    	console.log(data);
-								    })
-		        				}},"Signer")
-	        				,
-	        			])
-	        		])
-	        	])
-	        ])
-	    })
-	}
-		
-		
-		
-		function getPetitions(){
-			return  m.request({
-		        method: "GET",
-		        url: root+"/petitions",
-		        withCredentials: true,
-		    })
-		    .then(function(data) {
-		    	Petitions.list = data.items;
-		    })
-		}
-
-
-		var FormPetition = {
-			title:'',
-			description:'',
-			creator:'aldvine',
-			view: function () {
-				return m("form.box", {
-					onsubmit: function (e) {
-						e.preventDefault()
-						if(FormPetition.title != "" && FormPetition.description!=""){
-							m.request({
-							    method: "POST",
-							    url: root+"/petition",
-							    data:{title:FormPetition.title,description:FormPetition.description,creator:FormPetition.creator}
-							})
-							.then(function(data) {
-								console.log(data);
-							})
-						}
-					}
-				}, [
-						m("h1.title", "Création d'une pétition"),
-						m("label.label", "titre"),
-			 			m("input.input[type=text][placeholder=titre]", {
-							oninput: function (e) { 
-								FormPetition.title = e.target.value
-								},
-							value: FormPetition.title
-						}), 
-						m("label.label", "Description"),
-						m("input.input[type=text][placeholder=description]", {
-							oninput: function (e) {  FormPetition.description = e.target.value },
-							value:  FormPetition.description
-						}),
-						m("button.button[type=submit] .button is-rounded is-success", "Ajouter"),
-					])
-			}
-		}
-
-		m.route(document.body, "/",{
-				"/":Petitions})
-
-
-	</script>
+	    <script src="https://apis.google.com/js/platform.js?onload=loadAuthClient" async defer></script>
 </body>
   </body>
+  
 </html>
